hits-service/k8s/base/hits-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: hits-redis
  labels:
    app: hits-service
    app.openshift.io/runtime: python
    app.kubernetes.io/part-of: right-lyrics
  name: hits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hits-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: hits-service
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc.cluster.local:5000/right-lyrics/hits-service:1.1
          imagePullPolicy: Always
          name: hits-service
          ports:
            - containerPort: 8080
