hits-service/k8s/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hits-redis
    app.openshift.io/runtime: redis
    app.kubernetes.io/part-of: right-lyrics
  name: hits-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hits-redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: hits-redis
    spec:
      containers:
        - image: centos/redis-5-centos7
          imagePullPolicy: Always
          name: hits-redis
          ports:
            - containerPort: 6379
