hits-service/k8s/base/hits-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hits
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /api/hits
            backend:
              serviceName: hits-service
              servicePort: 8080
          - path: /api/popularity
            backend:
              serviceName: hits-service
              servicePort: 8080
