hits-service/k8s/base/hits_ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: albums
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /api/hit
            backend:
              serviceName: htis-service
              servicePort: 8080
